# fia-doc-parser

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
fia_doc_parser/: _constant.py  parser.py  utils.py
fia_doc_parser/models/: classification.py  driver.py  foreign_key.py  lap.py  pit_stop.py  utils.py
tests/: test_parse_entry_list.py
