[project]
name = "fia-doc-parser"
version = "0.0.0"
description = "FIA PDF documents parser"
authors = [
    {name = "Thibault Cheneviere",email = "thibault.chene23@gmail.com"}
]
license = {text = "MIT"}
licence-file = 'LICENCE'
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
