[project]
name = "fia-doc-parser"
version = "0.0.0"
description = "FIA PDF documents parser"
authors = [
    {name = "Thibault Cheneviere",email = "thibault.chene23@gmail.com"}
]
license = {text = "MIT"}
licence-file = 'LICENCE'
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf (>=1.26.7,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "ty (>=0.0.6,<0.0.7)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.pytest.ini_options]
addopts = '--cov fia_doc_parser'
testpaths = [
    "tests"
]

[tool.ruff]
include = ["fia_doc_parser/**/*.py"]
target-version = "py313"

[tool.ruff.lint]
ignore = ["E741"]
